--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "npx tsx src/index.ts"
+    "start": "npx tsx src/index.ts",
+    "clean": "rm -rf dist",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +14,17 @@
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "jest": "^29.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
+    "babel-jest": "^29.7.0",
     "typescript": "^5.4.5"
   }
 }
