--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=3000
+# For unit testing, expired.
 KAGGLE_USER="anthony08234"
-KAGGLE_KEY="aa6e55eed1973ff1c5565d18a809b00b"
+KAGGLE_KEY="c3aeae124223af9415db1847bb161192"
