--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "kaggle-node",
   "version": "1.0.0",
-  "description": "",
+  "description": "Kaggle API NodeJS wrapper",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "start": "npx tsx src/index.ts",
+    "build": "npx tsc",
     "clean": "rm -rf dist",
     "test": "jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "Anthony Norderhaug",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
@@ -26,5 +27,8 @@
     "@types/node": "^20.14.2",
     "babel-jest": "^29.7.0",
     "typescript": "^5.4.5"
-  }
+  },
+  "files": [
+    "/dist"
+  ]
 }
