--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "kaggle-node",
-  "version": "1.0.1",
+  "version": "1.1",
   "description": "NodeJS Library for Kaggle API",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/anorderh/kaggle-node"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -9,7 +13,7 @@
     "clean": "rm -rf dist",
     "test": "jest"
   },
-  "keywords": [],
+  "keywords": ["kaggle", "nodejs", "api", "typescript"],
   "author": "Anthony Norderhaug",
   "license": "ISC",
   "dependencies": {
