--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaggle-node",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "NodeJS Library for Kaggle API",
   "repository": {
     "type": "git",
@@ -13,13 +13,16 @@
     "clean": "rm -rf dist",
     "test": "jest"
   },
-  "keywords": ["kaggle", "nodejs", "api", "typescript"],
+  "keywords": [
+    "kaggle",
+    "nodejs",
+    "api",
+    "typescript"
+  ],
   "author": "Anthony Norderhaug",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.2",
-    "dotenv": "^16.4.5",
-    "jest": "^29.7.0"
+    "axios": "^1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
@@ -28,6 +31,8 @@
     "@jest/globals": "^29.7.0",
     "@types/node": "^20.14.2",
     "babel-jest": "^29.7.0",
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
     "typescript": "^5.4.5"
   },
   "files": [
